--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.3.5",
+    "sequelize-typescript": "^1.1.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.32",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.2",
-    "@types/cookie-parser": "^1.4.2",
+    "@types/sequelize": "^4.28.9",
+    "@types/validator": "^13.1.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   }
