--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.3.5",
     "sequelize-typescript": "^1.1.0"
@@ -24,6 +25,7 @@
     "@types/node": "^14.11.2",
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
+    "sequelize-cli": "^6.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   }
