--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.1.0",
-    "sequelize-typescript": "^1.1.0"
+    "sequelize-typescript": "^1.1.0",
+    "sharp": "^0.27.1"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.32",
